--- a/src/main/resources/archetype-resources/src/main/webapp/WEB-INF/templates/template-top.xhtml
+++ b/src/main/resources/archetype-resources/src/main/webapp/WEB-INF/templates/template-top.xhtml
@@ -43,24 +43,16 @@
     </ui:define>
 
 
-    <ui:define name="footer">
-          <a target="_blank"
-           href="https://github.com/adminfaces/">
-            Copyright (C) 2017 - AdminFaces
+   <ui:define name="footer">
+        <a target="_blank"
+           href="https://github.com/adminfaces/admin-starter-tomcat">
+            Copyright (C) 2017-2018 - AdminFaces Starter Tomcat Project
         </a>
 
         <div class="pull-right hidden-xs" style="color: gray">
             <i>${symbol_pound}{msg['starter.version']}</i>
         </div>
 
-        <script type="text/javascript">
-            if(isMobile()) {
-                ${symbol_dollar}('a.ui-link').click(function() {
-                    ${symbol_dollar}(this).prop('disabled', true);
-                    showBar();
-                });
-            }
-        </script>
     </ui:define>
 
 
